# deno-io-windows-repro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
